--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.81MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-2.42MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-934.9KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-305.8KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.64MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇬🇧 英国-2.21MB/s(Youtube:不良林), server: 152.89.210.105, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇨🇳 中国-2.58MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.67MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-20.33MB/s(Youtube:不良林), server: azhk.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: azhk.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-152.9KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-6.85MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.56MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-934.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-305.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.58MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-20.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-152.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
