--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-1.79MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-986.4KB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-856.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: 116.129.253.134, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.34MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-915.6KB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -73,12 +73,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -88,12 +88,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -104,12 +104,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
@@ -129,12 +129,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-986.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.05MB/s(Youtube:不良林)
+      - 🇫🇷 法国-856.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-990.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-915.6KB/s(Youtube:不良林)
