--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-166.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 台湾-1.10MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-2.71MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-371.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-514.2KB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-336.6KB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.98MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-566.1KB/s(Youtube:不良林), server: 152.89.210.105, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.28MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇫🇷 法国-897.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-166.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-566.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.28MB/s(Youtube:不良林)
+      - 🇫🇷 法国-897.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
